client/src/css/app.sass
// app global css in Sass form
.text--grey
    color: $dark-grey

.accent
    background: $accent

.alert
    background-color: #eee
    border-radius: 4px
    margin: 16px 0
    padding: 16px 16px 16px 16px
    font-size: 1em
    border-width: 0 5px
    border-style: solid
    border-color: $dark-grey
    letter-spacing: 0.5px
    .alert-title
        margin: -16px -16px 16px -16px
        padding: 4px 8px
        font-weight: bold
        border-bottom: 1px solid

.alert-tip
    background-color: $active
    border-color: $active

    .alert-title
        font-weight: bold
        border-color: $secondary

.alert-success
    background-color: #c1f4c5
    border-color: $positive

    .alert-title
        font-weight: bold
        border-color: $positive
fieldset
    border: none

.bg-dark-grey
    background: $dark-grey

.dark-grey
    color: $dark-grey

.light-grey
    background: $light-grey

.su-light-grey
    background: $su-light-grey

.highlight
    background: $highlight

.q-tab__label
    font-weight: 400

.q-item.q-router-link--active,
.q-item--active,
.q-tab--active
    color: #000
    font-weight: 500
    background-color: $active

.q-tab--active .q-tab__label
    font-weight: 500

@media (prefers-reduced-motion)
    *
        transition: none !important

.q-list.notifications-list .q-item
    .q-badge
        position: absolute
        left: 0
        top: 50%
        background: $primary
        transform: translate(-50%, -50%)
        height: 100%
        padding: 4px
        border-radius: 3px
    span
        font-weight: bold
    &.unread
        background: $active
a[target="_blank"]::after
    font-family: 'Material Icons'
    content: "open_in_new"
    font-feature-settings: 'liga'
    padding-left: 1px

